# sbre-cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: main.cpp
src/engine/: engine.cpp  engine.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h
